--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
             0 0 10px rgba(34, 197, 94, 0.8);
     }
     50% {
-        box-shadow: 0 0 15px rgba(34, 197, 94, 0.8),
+        box-shadow: 0 2px 40px rgba(34, 197, 94, 0.8),
             0 0 30px rgba(34, 197, 94, 0.8);
     }
     100% {
