--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,58 @@
 @keyframes glow {
-    0% {
-        box-shadow: 0 0 5px rgba(34, 197, 94, 0.8),
-            0 0 10px rgba(34, 197, 94, 0.8);
-    }
-    50% {
-        box-shadow: 0 2px 40px rgba(34, 197, 94, 0.8),
-            0 0 30px rgba(34, 197, 94, 0.8);
-    }
-    100% {
-        box-shadow: 0 0 5px rgba(34, 197, 94, 0.8),
-            0 0 10px rgba(34, 197, 94, 0.8);
-    }
+  0% {
+    box-shadow: 0 0 5px rgba(34, 197, 94, 0.8), 0 0 10px rgba(34, 197, 94, 0.8);
+  }
+  50% {
+    box-shadow: 0 2px 40px rgba(34, 197, 94, 0.8),
+      0 0 30px rgba(34, 197, 94, 0.8);
+  }
+  100% {
+    box-shadow: 0 0 5px rgba(34, 197, 94, 0.8), 0 0 10px rgba(34, 197, 94, 0.8);
+  }
 }
 
 .glow-effect {
-    animation: glow 2s infinite alternate;
+  animation: glow 2s infinite alternate;
+}
+
+.hero__title {
+  color: #f3f3f3;
+  text-align: center;
+  font-feature-settings: "liga" off, "clig" off;
+  -webkit-text-stroke-width: 3;
+  -webkit-text-stroke-color: #b3b900;
+  font-family: Newsreader;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: -1.28px;
+  text-shadow: -2px -2px 0 #b3b900, /* Dark blue outline */ 2px -2px 0 #b3b900,
+    -2px 2px 0 #b3b900, 2px 2px 0 #b3b900, 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
+}
+
+.about__title {
+  color: #f3f3f3;
+  text-align: center;
+  font-feature-settings: "liga" off, "clig" off;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-text-stroke-width: 3;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%; /* 38.4px */
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
+}
+
+.text__use {
+  color: #000;
+  text-align: center;
+  font-feature-settings: "liga" off, "clig" off;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-text-stroke-width: 1;
+  -webkit-text-stroke-color: #000;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 51.2px */
 }
