--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   animation: glow 2s infinite alternate;
 }
 
+
+
 .hero__title {
   color: #f3f3f3;
   text-align: center;
@@ -22,13 +24,19 @@
   -webkit-text-stroke-width: 3;
   -webkit-text-stroke-color: #b3b900;
   font-family: Newsreader;
-  font-size: 64px;
+  font-size: 34px;
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
   letter-spacing: -1.28px;
   text-shadow: -2px -2px 0 #b3b900, /* Dark blue outline */ 2px -2px 0 #b3b900,
     -2px 2px 0 #b3b900, 2px 2px 0 #b3b900, 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
+}
+
+@media (min-width: 1024px) {
+  .hero__title {
+    font-size: 64px;
+  }
 }
 
 .about__title {
