--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,6 @@
   animation: glow 2s infinite alternate;
 }
 
-
-
 .hero__title {
   color: #f3f3f3;
   text-align: center;
@@ -42,14 +40,11 @@
 .about__title {
   color: #f3f3f3;
   text-align: center;
-  font-feature-settings: "liga" off, "clig" off;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  -webkit-text-stroke-width: 3;
   font-size: 24px;
   font-style: normal;
-  font-weight: 700;
-  line-height: 160%; /* 38.4px */
-  text-shadow: 2px 2px 0px rgba(0, 0, 0, 1);
+  font-weight: 800;
+  line-height: 160%;
+  -webkit-text-stroke: 2px black;
 }
 
 .text__use {
