--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,38 @@
   font-weight: 400;
   line-height: 160%; /* 51.2px */
 }
+
+
+
+.link__item:nth-child(2):active .linkheader__box {
+  display: flex;
+  height: 136px;
+  overflow-y: hidden;
+}
+
+.link__item:nth-child(3):active .linkheader__box {
+  display: flex;
+}
+.link__item:nth-child(4):active .linkheader__box {
+  display: flex;
+  height: 181px;
+  overflow-y: hidden;
+}
+
+
+@media (min-width: 1024px) {
+  .link__item:nth-child(2):hover .linkheader__box {
+    display: flex;
+    height: 136px;
+    overflow-y: hidden;
+  }
+  
+  .link__item:nth-child(3):hover .linkheader__box {
+    display: flex;
+  }
+  .link__item:nth-child(4):hover .linkheader__box {
+    display: flex;
+    height: 181px;
+    overflow-y: hidden;
+  }
+}
