--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,16 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   -webkit-text-stroke-width: 1;
   -webkit-text-stroke-color: #000;
-  font-size: 32px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 400;
   line-height: 160%; /* 51.2px */
+}
+
+@media (min-width: 1024px) {
+  .text__use {
+    font-size: 32px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -80,4 +86,8 @@
     height: 181px;
     overflow-y: hidden;
   }
+}
+
+.onliy__blok:hover div {
+  background-color: rgba(0, 0, 0, 0.867);
 }
