--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,17 @@
   font-feature-settings: "liga" off, "clig" off;
   -webkit-text-stroke-width: 3;
   -webkit-text-stroke-color: #b3b900;
-  font-family: Newsreader;
   font-size: 34px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 120%;
   letter-spacing: -1.28px;
-  text-shadow: -2px -2px 0 #b3b900, /* Dark blue outline */ 2px -2px 0 #b3b900,
-    -2px 2px 0 #b3b900, 2px 2px 0 #b3b900, 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow for depth */
+  text-shadow: 2px 2px 2px #000;
+}
+
+.hero__box {
+  background-size: 1200px;
+  background-position: -50px -100px;
 }
 
 @media (min-width: 1024px) {
@@ -67,7 +70,7 @@
 
 @media (min-width: 1024px) {
   .text__use {
-    font-size: 32px;
+    font-size: 28px;
   }
 }
 
@@ -90,4 +93,9 @@
 
 .onliy__blok:hover div {
   background-color: rgba(0, 0, 0, 0.867);
+}
+
+.use__box {
+  border-radius: 30px;
+box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.10);
 }
