--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 .linkheader__box .active {
   color: white;
-  background-color: rgb(100, 94, 94);
+  background-color: #5eaab8;
 }
 
 .dark .site-header .active {
