--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@
 
 .use__box {
   border-radius: 10px;
-  box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.10);
+  box-shadow: 0px 4px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .dark .use__box {
@@ -108,9 +108,9 @@
 }
 
 .use__box:hover .text__use {
-  color: #17195A;
+  color: #c0c0cf;
 }
 
 .dark .use__box .text__use {
-  color: #fff
+  color: #fff;
 }
